--- a/index.html
+++ b/index.html
@@ -145,9 +145,13 @@
     <!---Footer-->
     <div class="footer">
        <div class="footer-content">
-        <p>Copyright by @Jahidul Islam Mamun</p>
-        <p>Phone Number: <b>01595355625</b></p>
+        <p>Copyright by @Jahidul Islam Mamun (jim)</p>
+        <p>Phone Number: <b>01923094763</b></p>
        </div>
     </div>
+
+
+
+
 </body>
 </html>
